--- a/CIS300_final/src/index.css
+++ b/CIS300_final/src/index.css
@@ -6,5 +6,5 @@
 }
 
 body {
-    background: #FFD1AA linear-gradient(#FFD1AA, #FFFFFF) no-repeat;
+    background: #FFFFFF linear-gradient(#FFD1AA, #FFFFFF) no-repeat;
 }
