Re-aligned footer and header, completed contact page

--- a/CIS300_final/src/routes/Home.css
+++ b/CIS300_final/src/routes/Home.css
@@ -77,7 +77,7 @@ main {
 .shopImages {
     display: flex;
     padding: 0 50px 50px 50px;
-    justify-content: space-around;
+    justify-content: space-between;
     text-align: center;
 }
 
