--- a/CIS300_final/src/sections/Footer.css
+++ b/CIS300_final/src/sections/Footer.css
@@ -2,7 +2,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 50px;
     position: relative;
     border-top: 1px solid #552600;
     background: #FFD1AA;
@@ -13,7 +13,7 @@ footer ul {
     font-size: 1.2em;
     width: 20em;
     margin: 0;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 footer ul a {
