Complete preferences page

--- a/CIS300_final/src/routes/Contact.css
+++ b/CIS300_final/src/routes/Contact.css
@@ -9,7 +9,7 @@ form label {
     padding: 15px 0;
 }
 
-form input, textarea {
+form input, textarea, select {
     padding: 5px 10px;
     border-radius: 5px;
     border: 1px solid black;
