--- a/CIS300_final/src/routes/YourStores.css
+++ b/CIS300_final/src/routes/YourStores.css
@@ -1,3 +1,24 @@
+table {
+    background: #ffffff;
+    margin: 20px auto;
+    padding: 10px;
+    width: 60%;
+    border: 1px solid #552600;
+}
+
+caption {
+    padding: 5px;
+    background-color: #FFFFFF;
+    border: 1px solid #552600;
+    border-bottom: none;
+    font-weight: 800;
+}
+
+th, td {
+    text-align: center;
+    font-weight: 600;
+}
+
 .internalWrapper {
     text-align: center;
 }
@@ -23,6 +44,10 @@
 
 .cell {
     text-align: center;
+    background-color: #fff2e2;
+    padding: 20px;
+    border: 2px solid #552600;
+    border-radius: 25px;
 }
 
 .cell img {
@@ -36,3 +61,4 @@
 .cell p {
     margin: 10px 0 25px 0;
 }
+
